log.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:processDebugGoogleServices UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
C:\Users\ASUS\AndroidStudioProjects\monokromcoffee2\app\src\main\java\com\example\monokromcoffee\SettingsActivity.java:17: error: cannot find symbol
import com.google.android.gms.auth.api.signin.GoogleSignIn;
                                             ^
  symbol:   class GoogleSignIn
  location: package com.google.android.gms.auth.api.signin
C:\Users\ASUS\AndroidStudioProjects\monokromcoffee2\app\src\main\java\com\example\monokromcoffee\SettingsActivity.java:18: error: cannot find symbol
import com.google.android.gms.auth.api.signin.GoogleSignInClient;
                                             ^
  symbol:   class GoogleSignInClient
  location: package com.google.android.gms.auth.api.signin
C:\Users\ASUS\AndroidStudioProjects\monokromcoffee2\app\src\main\java\com\example\monokromcoffee\SettingsActivity.java:142: error: cannot find symbol
        GoogleSignInClient googleSignInClient = GoogleSignIn.getClient(this, gso);
        ^
  symbol:   class GoogleSignInClient
  location: class SettingsActivity
C:\Users\ASUS\AndroidStudioProjects\monokromcoffee2\app\src\main\java\com\example\monokromcoffee\SettingsActivity.java:142: error: cannot find symbol
        GoogleSignInClient googleSignInClient = GoogleSignIn.getClient(this, gso);
                                                ^
  symbol:   variable GoogleSignIn
  location: class SettingsActivity
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
4 errors

[Incubating] Problems report is available at: file:///C:/Users/ASUS/AndroidStudioProjects/monokromcoffee2/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  C:\Users\ASUS\AndroidStudioProjects\monokromcoffee2\app\src\main\java\com\example\monokromcoffee\SettingsActivity.java:17: error: cannot find symbol
  import com.google.android.gms.auth.api.signin.GoogleSignIn;
                                               ^
    symbol:   class GoogleSignIn
    location: package com.google.android.gms.auth.api.signin
  C:\Users\ASUS\AndroidStudioProjects\monokromcoffee2\app\src\main\java\com\example\monokromcoffee\SettingsActivity.java:18: error: cannot find symbol
  import com.google.android.gms.auth.api.signin.GoogleSignInClient;
                                               ^
    symbol:   class GoogleSignInClient
    location: package com.google.android.gms.auth.api.signin
  C:\Users\ASUS\AndroidStudioProjects\monokromcoffee2\app\src\main\java\com\example\monokromcoffee\SettingsActivity.java:142: error: cannot find symbol
          GoogleSignInClient googleSignInClient = GoogleSignIn.getClient(this, gso);
          ^
    symbol:   class GoogleSignInClient
    location: class SettingsActivity
  C:\Users\ASUS\AndroidStudioProjects\monokromcoffee2\app\src\main\java\com\example\monokromcoffee\SettingsActivity.java:142: error: cannot find symbol
          GoogleSignInClient googleSignInClient = GoogleSignIn.getClient(this, gso);
                                                  ^
    symbol:   variable GoogleSignIn
    location: class SettingsActivity
  Note: Some input files use or override a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  4 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 4s
18 actionable tasks: 1 executed, 17 up-to-date
